Add suggested_in_amount
